--- a/.github/workflows/breaking-the-ice-with-pester.yml
+++ b/.github/workflows/breaking-the-ice-with-pester.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Pester Test - using Invoke-Pester cmdlet from Pester module
         run: |
-          Install-Module "Pester"
+          Install-Module "Pester" -Force
 
           $Config = New-PesterConfiguration
           $Config.Run.Path = ".\2022\Breaking the ice with Pester\example.Tests.ps1"
